# podcast_scraper

./: .ai-coding-guidelines-quick.md  .ai-coding-guidelines.md  .codespell-ignore  .codespellrc  .cursorrules  .dockerignore  .env.example  .flake8  .gitignore  .hadolint.yaml  .markdownlint.json  .markdownlintignore  .prettierrc  .vulture_whitelist.py  AGENTS.md  API_COMPARISON.md  API_MIGRATION_GUIDE.md  CI_CD_OPTIMIZATION_SUMMARY.md  CI_CD_VALIDATION_TEST_CASES.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_BUILD_FIX.md  DOCKER_BUILD_SUMMARY.md  DOCKER_CI_TROUBLESHOOTING.md  Dockerfile  ISSUES_TO_CLOSE.md  LICENSE  Makefile  README.md  TEST_CATEGORIZATION.md  __init__.py  cli.py  close_resolved_issues.sh  codecov.yml  config.example.json  config.example.yaml  config.py  coverage.json  coverage.lcov  docker-compose.llm-only.yml  (+24 more)
.cache/: README.md
.cursor/: hooks.json
.cursor/commands/: README.md  implement-attached-plan.md  pipeline-run-and-report.md  review-changes-gaps.md
.cursor/hooks/: check-zombie.sh
.cursor/prompts/: README.md  code-review.txt  debug-ci.txt  design-rfc.md  implementation-plan.txt
.cursor/rules/: agent-browser-ui-fixes.mdc  ai-guidelines.mdc  coding-standards.mdc  documentation.mdc  engineering-process.mdc  git-working-tree-safety.mdc  git-worktree.mdc  github-issue-creation.mdc  local-dev-serve-defaults.mdc  markdown-style.mdc  module-boundaries.mdc  (+1 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  start.sh
.github/: CODEOWNERS  SELF_HOSTED_RUNNER_ALLOWLIST.md  actionlint.yaml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.journal/: README.md
.metrics/: README.md  SCHEMA.md  check_last_entry.sh
app/: .gitignore  README.md  env.d.ts  index.html  lighthouserc.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.e2e.json  vite.config.ts
autoresearch/: AUTORESEARCH_CLAUDE_CODE_GUIDE.md  JUDGING.md  MODEL_PLAYBOOK.md  PER_MODEL_OPTIMAL_PARAMS.md  README.md  anthropic_v2_comparison_2026-04-15.md  eval_report_v2_2026-04-15.md  openai_v2_comparison_2026-04-14.md  provider_matrix_v2_2026-04-15.md
compose/: README.md  docker-compose.app.yml  docker-compose.jobs-docker.yml  docker-compose.llm-only.yml  docker-compose.player-public.yml  docker-compose.player-secrets.yml  docker-compose.prod.yml  docker-compose.secrets.yml  docker-compose.smoke.yml  docker-compose.stack-test.yml  docker-compose.stack.yml  docker-compose.vps-prod.yml  docker-compose.yml  grafana-agent.yaml  mock-feeds.stack-test.conf
config/: corpus_snapshot_format.json  corpus_snapshot_reader_support.json  dev-seed-users.json  digest_topics.yaml  last_deployed_prod_version.json  observability.example.yaml  pricing_assumptions.yaml  search.yaml
docker/: Dockerfile  README.md  entrypoint.sh  secrets-shim.sh
docs/: API_COMPARISON.md  API_MIGRATION_GUIDE.md  ARCHITECTURE.md  CI_CD.md  CI_QUALITY_METRICS.md  COMPATIBILITY.md  CURSOR_AI_BEST_PRACTICES.md  CUSTOM_PROVIDER_GUIDE.md  DEPENDENCIES.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_NOTES.md  DOCKER_BASE_IMAGE_ANALYSIS.md  ENVIRONMENT_VARIABLES.md  FALLBACK_BEHAVIOR.md  LEGAL.md  MARKDOWN_LINTING.md  NON_FUNCTIONAL_REQUIREMENTS.md  PROTOCOL_EXTENSION_GUIDE.md  PROVIDER_ATTRIBUTES.md  PROVIDER_MIGRATION_GUIDE.md  REFACTORING_OPPORTUNITIES.md  ROADMAP.md  SESSION_SUMMARY.md  SUMMARIZATION_GUIDE.md  TESTING_GUIDE.md  TESTING_STRATEGY.md  TEST_FILE_REFACTORING.md  TYPE_HINTS_ANALYSIS.md  WORKFLOW_TRIGGER_ANALYSIS.md  index.md  legal.md  requirements.txt
examples/: .env.example  config.example.gemini.yaml  config.example.json  config.example.yaml  supervisor.conf.example  systemd.service.example
infra/: .env.dgx.local.example  .env.drill.local.example  .env.local.example  .gitignore  .sops.yaml  README.md  preprod.env.example  recover.sh  tofu
metrics/: README.md  history-nightly.jsonl  index.html  latest-ci.json  latest-nightly.json
results/: pairwise_gpt54_vs_gemini20flash.json  pairwise_gpt54_vs_sonnet46.json  pairwise_sonnet46_vs_gemini20flash.json
scripts/: README.md  analyze_dependencies.py  analyze_test_memory.py  audit_e2e_tests.py  backup_cache.py  build_app_validation_corpus.py  build_production_shaped_fixture.py  build_synthetic_validation_corpus.py  build_v3_fixtures.py  check_unit_test_imports.py  collect_pipeline_metrics.py  compute_gi_position_hints.py  docs_strip_checkmarks.py  docs_strip_emoji.py  eval_cleaning.py  eval_embedding_providers.py  eval_entity_canonicalization.py  eval_hybrid_judged.py  eval_summaries.py  eval_two_tier_retrieval.py  fix_markdown.py  generate_dashboard.py  generate_metrics.py  gi_kg_viz_server.py  migrate_gi_speaker_to_person.py  migrate_gi_to_v3.py  migrate_kg_entity_ids.py  migrate_kg_entity_to_person_org.py  patch_venv_activate_spacy_wheels.py  pre_release_check.py  preload_ml_models.py  profile_e2e_test_memory.py  reproject_gi_to_adfree.py  restore_cache.py  setup_venv.sh  spacy_model_wheels_requirements.txt  train_query_router.py
speaker_detectors/: __init__.py  base.py  factory.py  ner_detector.py  openai_detector.py
summarization/: base.py  factory.py  local_provider.py  openai_provider.py
tailscale/: README.md  policy.hujson
tests/: __init__.py  _fixtures.py  conftest.py  test_api_versioning.py  test_cli.py  test_downloader.py  test_env_variables.py  test_eval_scripts.py  test_fallback_behavior.py  test_filesystem.py  test_infrastructure.py  test_integration.py  test_metadata.py  test_openai_providers.py  test_parallel_summarization.py  test_podcast_scraper.py  test_protocol_compliance.py  test_protocol_compliance_extended.py  test_provider_error_handling_extended.py  test_provider_integration.py  test_rss_parser.py  test_service.py  test_speaker_detection.py  test_speaker_detector_provider.py  test_stage0_foundation.py  test_summarization_provider.py  test_summarizer.py  test_summarizer_edge_cases.py  test_summarizer_security.py  test_transcription_provider.py  test_utilities.py
tools/: __init__.py
transcription/: base.py  factory.py  openai_provider.py  whisper_provider.py
wheels/: README.md
(+6966 files in other folders)
