[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-scraper"
version = "2.4.0"
description = "Download podcast transcripts from RSS feeds with optional Whisper fallback"
readme = "README.md"
authors = [{name = "Podcast Scraper Maintainers"}]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0,<3.0.0",
  "urllib3>=2.6.0,<3.0.0",
  "tqdm>=4.66.0,<5.0.0",
  "defusedxml>=0.7.1,<1.0.0",
  "platformdirs>=3.11.0,<5.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "PyYAML>=6.0,<7.0.0",
  "zipp>=3.19.1,<4.0.0",  # Security fix: CVE-2024-50208 (infinite loop vulnerability)
]

[project.optional-dependencies]
# Heavy ML dependencies - only install when needed
ml = [
  "openai-whisper>=20231117",
  "spacy>=3.7.0,<4.0.0",
  "torch>=2.0.0,<3.0.0",
  "transformers>=4.30.0,<5.0.0",
  "sentencepiece>=0.1.99,<1.0.0",
  "accelerate>=0.20.0,<1.0.0",
  "protobuf>=3.20.0,<5.0.0",
]
# Development tools
dev = [
  "black>=23.0.0,<25.0.0",
  "isort>=5.12.0,<8.0.0",
  "flake8>=6.0.0,<8.0.0",
  "pytest>=7.4.0,<9.0.0",
  "pytest-cov>=4.1.0,<6.0.0",
  "mypy>=1.5.0,<2.0.0",
  "types-PyYAML>=6.0.12,<7.0.0",
  "bandit>=1.7.5,<2.0.0",
  "pip-audit>=2.6.0,<3.0.0",
  "build",
]
# Documentation - see docs/requirements.txt

[tool.setuptools]
packages = ["podcast_scraper"]
package-dir = {podcast_scraper = "."}

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.(py|pyi)$'
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | \.build
    | \.test_outputs
    | build
    | dist
    | __pycache__
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["podcast_scraper"]
combine_as_imports = true
force_alphabetical_sort_within_sections = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["podcast_scraper"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (may require network/downloads)",
]
